manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: 82277402 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 82277402
  template:
    metadata:
      labels:
        app: 82277402 
    spec:
      containers:
        - name: 82277402 
          image: cepg82277402acr.azurecr.io/82277402
          ports:
          - containerPort: 8080
