manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 82277402-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: 82277402.cepg-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: my-82277402
            port:
              number: 8080
        pathType: Prefix
